--- a/Material de Clases/README
+++ b/Material de Clases/README
@@ -1,1 +1,7 @@
+Enlaces
 
+PyCharm
+https://www.jetbrains.com/es-es/pycharm/download/#section=windows
+
+python
+https://www.python.org/downloads/release/python-3103/
