--- a/Ejercicios/Básicos/README
+++ b/Ejercicios/Básicos/README
@@ -1,1 +1,2 @@
 Cada archivo .py contiene instrucciones para la realización de un ejercicio.
+Descargue los archivos para realizar los ejericicos, o bien, copie el código de cada uno en PyCharm
