--- a/Ejercicios/Básicos/README
+++ b/Ejercicios/Básicos/README
@@ -1,2 +1,6 @@
-Cada archivo .py contiene instrucciones para la realización de un ejercicio.
-Descargue los archivos para realizar los ejericicos, o bien, copie el código de cada uno en PyCharm
+Cada archivo .py (ej0-ej10) contiene instrucciones para la realización de un ejercicio.
+Descargue los archivos para realizar los ejericicos, o bien, copie el código de cada uno en PyCharm.
+
+El archivo 'Ejercicios Mod 4.pdf' contiene otros ejercicios propuestos.
+Intente realizar los ejercicios 0 al 10 antes de los descritos en el documento pdf, de esta manera
+se puede familiarizar con la lectura de código antes de comenzar con su escritura.
