--- a/Tareas/Tarea 2/README
+++ b/Tareas/Tarea 2/README
@@ -1,1 +1,2 @@
-
+Descargue el archivo Tarea 2 - Filtros de imagen.zip
+Todos los archivos necesarios para realizar su tarea están comprimidos en el .zip
