--- a/Laboratorios/Lab 7-8-9/README
+++ b/Laboratorios/Lab 7-8-9/README
@@ -1,2 +1,7 @@
 
-https://www.canva.com/design/DAFNK-Ue4Dc/L7Mb1y7KrhPsH2LNe7nRTw/view?utm_content=DAFNK-Ue4Dc&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview
+
+
+A través del siguiente enlace es posible editar el baner para la app.<br/>
+[Baner](https://www.canva.com/design/DAFNK-Ue4Dc/L7Mb1y7KrhPsH2LNe7nRTw/view?utm_content=DAFNK-Ue4Dc&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink&mode=preview)
+
+
